tests/heuristics/snapshots/heuristics__battle_end.snap
---
created: "2019-09-30T08:31:04.877478572Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "&field.to_field_string()"
---

0330333310
0330333311
3333331111
3333331111
3333113310
3333113333
3333110133
3333111130
3333111330
3313111130
3113111110
3111111130
3111111133
3111111133
3311113133
3111113333
3131111333
3131111113
3131111111
3331111111

