tests/heuristics/snapshots/heuristics__connectability.snap
---
created: "2019-09-18T11:15:47.053317952Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "(heuristic_value_connectability(&field2, 0),\n heuristic_value_connectability(&field2, 1))"
---
(
    0.11999999999999998,
    0.13999999999999999,
)
