tests/heuristics/snapshots/heuristics__enemy_block2.snap
---
created: "2019-09-18T11:15:47.309650252Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "(heuristic_value_enemy_block(&field2, 0),\n heuristic_value_enemy_block(&field2, 1))"
---
(
    0.01,
    0.01,
)
