tests/heuristics/snapshots/heuristics__field2_after_restore.snap
---
created: "2019-09-30T08:33:20.253397141Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "&field.to_field_string()"
---

0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0000000000
0020000000
0020000000
0020000000
0010000000
0440000000
3410000000
0422222000
4342134440

