tests/heuristics/snapshots/heuristics__height.snap
---
created: "2019-09-18T11:15:46.790882375Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: "(heuristic_value_height_territory(&field, 0),\n heuristic_value_height_territory(&field, 1))"
---
(
    0.4,
    0.0,
)
