tests/heuristics/snapshots/heuristics__lowest_ys.snap
---
created: "2019-09-18T11:15:46.707906798Z"
creator: insta@0.8.1
source: tests/heuristics/mod.rs
expression: field.lowest_ys
---
[
    3,
    4,
    8,
    2,
    2,
    2,
    2,
    1,
    1,
    0,
]
